fixed: fit to content made content invisible

--- a/src/extensions-dashlet.scss
+++ b/src/extensions-dashlet.scss
@@ -4,7 +4,6 @@
   ul {
     margin-bottom: 0;
     padding: 0 4px;
-    flex: 1 1 0;
     overflow: auto;
   }
   .placeholder {
